--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,105 @@
 html,body{
 	margin:0;
 	padding:0;
-	background-color:rgba(255,255,255,1)
-}
+	background-color:rgba(255,255,255,1);
+	}
+.header{
+	width:100%;
+	height:10%;
+	z-index:2;
+	position:fixed;
+	top:0;
+	background-color:white;
+
+	}
+.logo{
+	width:3%;
+	height:auto;
+	float: left;
+	padding-left:10%;
+	padding-top:1%;
+	}
+
+.navbut{
+	display:inline;
+	}
+
+.navbut a{
+	margin:0;
+	padding:0;	
+	display:inline-block;
+	text-decoration:none;
+	color:black;
+	width:10%;
+	
+	}
+ul {
+	padding:1.3% 10% 0% 10%;
+	text-align:center;
+	vertical-align:middle;	
+	}
+.wrap1{
+	width:100%;
+	height:900px;
+	text-align:center;
+	background-image:url(ph.jpg);
+	background-size:100%;
+	background-repeat:no-repeat;
+	margin:0;
+	
+	}
+.wrap2{
+	width:100%;
+	height:600px;
+	text-align:center;
+	background-color:grey;
+	margin:0;
+	}
+.footer{
+	width:100%;
+	height:200px;
+	text-align:center;
+	}
+.s{
+	position:relative;
+	top:50%;
+	}
+.s2{
+	position:relative;
+	top:30%;	
+	}
+.s3{
+	position:relative;
+	top:40%;
+	padding:0 20% 0 20%;
+	}
+.s4{
+	position:realtive;
+	top:10%;
+	
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
