--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ html,body{
 	padding:0;
 	background-color:rgba(255,255,255,1);
 	}
+.wrapper{
+	font-size:0; /*white div issue fix to be added in parent // also added inline block peoperty to all child divs // notice text dissapears unless a text-size value is set*/
+	}
 .header{
 	width:100%;
 	height:10%;
@@ -12,7 +15,8 @@ html,body{
 	position:fixed;
 	top:0;
 	background-color:white;
-
+	display:inline-block;
+	font-size:10px;
 	}
 .logo{
 	width:3%;
@@ -47,7 +51,8 @@ ul {
 	background-image:url(ph.jpg);
 	background-size:100%;
 	background-repeat:no-repeat;
-	margin:0;
+	line-height:0;
+	display:inline-block;
 	
 	}
 .wrap2{
@@ -56,31 +61,37 @@ ul {
 	text-align:center;
 	background-color:grey;
 	margin:0;
+	vertical-align:top;
+	display:inline-block;
 	}
 .footer{
 	width:100%;
 	height:200px;
 	text-align:center;
+	display:inline-block;
 	}
 .s{
 	position:relative;
-	top:50%;
+	top:50%;	
+	font-size:18px;
 	}
 .s2{
 	position:relative;
-	top:30%;	
+	top:30%;
+	font-size:18px;	
 	}
 .s3{
 	position:relative;
 	top:40%;
 	padding:0 20% 0 20%;
+	font-size:10px;
 	}
 .s4{
 	position:realtive;
 	top:10%;
+	font-size:10px
 	
 	}
-
 
 
 
