--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ html,body{
 	}
 .wrapper{
 	font-size:0; /*white div issue fix to be added in parent // also added inline block peoperty to all child divs // notice text dissapears unless a text-size value is set*/
+	font-family: 'Advent Pro', sans-serif;
 	}
 .header{
 	width:100%;
