--- a/styles.css
+++ b/styles.css
@@ -4,46 +4,57 @@ html,body{
 	margin:0;
 	padding:0;
 	background-color:rgba(255,255,255,1);
+	height:100%;
+	width:100%;
 	}
 .wrapper{
 	font-size:0; /*white div issue fix to be added in parent // also added inline block peoperty to all child divs // notice text dissapears unless a text-size value is set*/
 	font-family: 'Advent Pro', sans-serif;
+	top:0;
+	display:inline-block;
 	}
 .header{
 	width:100%;
-	height:10%;
-	z-index:2;
-	position:fixed;
+	height:100px;
 	top:0;
 	background-color:white;
-	display:inline-block;
+	display:block;
 	font-size:10px;
+	background-image:url(headermesh.jpg);
+	background-repeat:no-repeat;
+	background-size:100%;
+	border-bottom:solid 0px white;
 	}
 .logo{
 	width:3%;
 	height:auto;
 	float: left;
-	padding-left:10%;
-	padding-top:1%;
+	padding-left:7%;
+	padding-top: 1%;
 	}
-
 .navbut{
 	display:inline;
 	}
-
-.navbut a{
+.navbut a{			/*header page links*/
 	margin:0;
 	padding:0;	
 	display:inline-block;
 	text-decoration:none;
-	color:black;
+	color:white;
 	width:10%;
-	
 	}
-ul {
-	padding:1.3% 10% 0% 10%;
+.navbut a:hover{
+	color:red;	
+	}
+ul {				/*navlist positioning, style*/	
+	padding:2.5% 0% 2.5% 45%;
 	text-align:center;
 	vertical-align:middle;	
+	font-family:'Proxima Nova', sans-serif;
+	font-size:12px;
+	text-transform:uppercase;
+	margin:0;
+	letter-spacing:3px;
 	}
 .wrap1{
 	width:100%;
@@ -91,7 +102,6 @@ ul {
 	position:realtive;
 	top:10%;
 	font-size:10px
-	
 	}
 
 
