--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,14 @@ html,body{
 	margin:0;
 	padding:0;
 	background-color:rgba(255,255,255,1);
-	height:100%;
-	width:100%;
+
 	}
 .wrapper{
 	font-size:0; /*white div issue fix to be added in parent // also added inline block peoperty to all child divs // notice text dissapears unless a text-size value is set*/
 	font-family: 'Advent Pro', sans-serif;
 	top:0;
 	display:inline-block;
+	overflow:hidden;
 	}
 .header{
 	width:100%;
@@ -23,7 +23,8 @@ html,body{
 	background-image:url(headermesh2.jpg);
 	background-repeat:no-repeat;
 	background-size:100%;
-	border-bottom:solid 0px white;
+	border-bottom:solid 1px white;
+	background-color:rgba(0,0,0,0.5)
 	}
 .logo{
 	width:3%;
@@ -67,9 +68,9 @@ ul {				/*navlist positioning, style*/
 	}
 .wrap2{
 	width:100%;
-	height:600px;
+	height:900px;
 	text-align:center;
-	background-color:grey;
+	background-color:white;
 	margin:0;
 	vertical-align:top;
 	display:inline-block;
@@ -79,12 +80,14 @@ ul {				/*navlist positioning, style*/
 	height:200px;
 	text-align:center;
 	display:inline-block;
+	background-color:black;
+	display:inline-block;
 	}
 .s{
 	position:relative;
 	top:20%;	
 	font-size:42px;
-	color:black;
+	color:white;
 	font-weight:100;
 	left:25%;
 	letter-spacing:5px;
