--- a/styles.css
+++ b/styles.css
@@ -97,13 +97,14 @@ ul {				/*navlist positioning, style*/
 .s2{
 	position:relative;
 	top:30%;
-	font-size:18px;	
+	font-size:42px;	
 	}
 .s3{
 	position:relative;
 	top:40%;
 	padding:0 20% 0 20%;
-	font-size:10px;
+	font-size:30px;
+	text-align:left;
 	}
 .s4{
 	position:realtive;
@@ -112,7 +113,6 @@ ul {				/*navlist positioning, style*/
 	}
 #hs1 a{
 	color:red;}
-
 
 
 
