--- a/styles.css
+++ b/styles.css
@@ -90,9 +90,9 @@ ul {				/*navlist positioning, style*/
 	font-size:42px;
 	color:white;
 	font-weight:100;
-	left:25%;
 	letter-spacing:5px;
 	font-family:'Proxima Nova', sans serif;
+	text-align:center;
 	}
 .s2{
 	position:relative;
