--- a/styles.css
+++ b/styles.css
@@ -10,22 +10,22 @@ html,body{
 
 
 .wrapper{
-	font-size:0; /*white div issue fix to be added in parent // also added inline block peoperty to all child divs // notice text dissapears unless a text-size value is set*/
+	font-size:0; 
 	font-family: 'Advent Pro', sans-serif;
 	top:0;
 	overflow:hidden;
 	}
 .header{
 	width:100%;
-	height:100px;
+	/*height:100px;*/
 	top:0;
-	background-color:white;
+	/*background-color:white;*/
 	display:block;
 	font-size:10px;
 	background-image:url(headermesh2.jpg);
 	background-repeat:no-repeat;
 	background-size:100%;
-	background-color:rgba(0,0,0,0.5)
+	/*background-color:rgba(0,0,0,0.5)*/
 	}
 .logo{
 	width:3%;
@@ -112,26 +112,3 @@ ul {				/*navlist positioning, style*/
 	}
 #hs1 a{
 	color:red;}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
